# adk-sql-reflection-pattern

./: .env.example  .gitignore  GEMINI.md  Procfile  README.md  pyproject.toml  tools.yaml
PRDs/: 00-adk-mcp-sql-agent.md  01-add-optional-dataplex.md
PRPs/: 00-adk-mcp-sql-agent.md  01-add-optional-dataplex.md
agents/sql_agent/: agent.py  config.py  final_responder.py  prompts.py  schema_inspector.py  semantic_enricher.py  sql_generator_loop.py
docs/: dataplex_tutorial.md
scripts/: attach_metadata.py  generate_sample_data.py
terraform/: .terraform.lock.hcl  bigquery.tf  data.tf  dataplex.tf  dataplex_iam.tf  dataplex_metadata.tf  main.tf  variables.tf
tests/: test_agent_structure.py  test_cases.txt  test_cases_dataplex.md  test_cases_google_trends.md  test_schema_inspector.py  test_semantic_enricher.py  test_sql_generator_loop.py
